MarcoKitTests/TestData/error/array2.marco
--before
[t

--after
2: 'true' expected

[tğŸ’¥